[project]
name = "dna"
version = "0.1.0"
description = "Data Structures aNd Algorithms."
readme = "README.md"
authors = [
    { name = "Grant Andersen", email = "gandersen.codes@gmail.com" }
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-retry>=1.7.0",
]
